--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "nomadic",
   "version": "1.0.0",
-  "main": "dist/cli.js",
+  "main": "dist/index.js",
+  "types": "./lib/nomadic.d.ts",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "nomadic": "ts-node --files ./lib/cli.ts"
   },
   "bin": {
     "nomadic": "./dist/cli.js"
+  },
+  "peerDependencies": {
+    "pg": ">= 7 < 9"
   },
   "devDependencies": {
     "@types/dedent": "^0.7.0",
     "@types/inflection": "^1.13.0",
     "@types/jest": "^28.1.6",
+    "@types/lodash": "^4.14.182",
     "@types/mock-fs": "^4.13.1",
     "@types/node": "^18.6.3",
     "@types/pg": "^8.6.5",
@@ -27,7 +34,7 @@
     "colors": "^1.4.0",
     "dedent": "^0.7.0",
     "del": "^7.0.0",
-    "eslint": "^8.21.0",
+    "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.4.0",
     "eslint-loader": "^4.0.2",
@@ -40,6 +47,7 @@
     "jest-environment-node": "^28.1.3",
     "mock-argv": "^2.0.8",
     "mock-fs": "^5.1.2",
+    "pg": "^8.7.3",
     "prettier": "^2.7.1",
     "q": "^1.5.1",
     "quicktype-core": "^6.0.71",
@@ -49,8 +57,11 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/figlet": "^1.5.4",
+    "commander": "^9.4.0",
+    "debug": "^4.3.4",
     "figlet": "^1.5.2",
     "inflection": "^1.13.2",
-    "yargs": "^17.5.1"
+    "lodash": "^4.17.21"
   }
 }
