--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "nomadic",
   "description": "Super simple postgres migrations cli + library",
   "repository": "github:cellis/nomadic",
-  "version": "0.1.19",
+  "version": "0.1.20",
   "main": "dist/index.js",
   "files": [
     "dist/**/*",
-    "src/**/*"
+    "lib/**/*"
   ],
   "types": "./lib/index.ts",
   "license": "MIT",
