--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nomadic",
   "description": "Super simple postgres migrations cli + library",
   "repository": "github:cellis/nomadic",
-  "version": "0.1.29",
+  "version": "0.2",
   "main": "dist/index.js",
   "files": [
     "dist/**/*",
@@ -83,7 +83,7 @@
     "commander": "^9.4.0",
     "debug": "^4.3.4",
     "figlet": "^1.5.2",
-    "glob-promise": "^5.0.0",
+    "glob": "^10.3.3",
     "inflection": "^1.13.2"
   }
 }
